<resources>
    <!--    menu-->
    <string name="app_name">CMTP1</string>
    <string name="cmtp_notes_label">Notes</string>
    <string name="cmtp_maps_label">Maps</string>
    <string name="cmtp_account_label">Login</string>
    <string name="cmtp_account_leave_label">Logout</string>

    <string name="toolbar_filter">Filter</string>

    <!--    note-->
    <string name="notes">My Notes</string>
    <string name="notes_title">Notes Title</string>
    <string name="notes_sub_title">Notes Sub Title</string>
    <string name="notes_desc">Enter Note Here</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search your notes</string>
    <string name="maps_api_key">Maps</string>
    <string name="title_activity_maps">Map</string>
    <string name="delete_note">Delete</string>
    <string name="delete_note_sheet">Delete Note</string>
    <string name="pick_color_sheet">Pick Color</string>
    <string name="note_title_required">Note Title is Required</string>
    <string name="selected"> Selected</string>

    <!--    Login-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="no_account">Creat acount</string>
    <string name="btn_login">Login</string>
    <string name="required">This Field is Required</string>
    <string name="user_info_wrong">Wrong Info</string>
    <string name="login_fail">Login Fail</string>
    <string name="welcom">Welcom</string>

    <!--    Logout-->
    <string name="logout">Logout</string>
    <string name="leave">Do you really want to end your session?</string>
    <string name="yes">Yes</string>
    <string name="no">Cancel</string>


    <!--add Event-->
    <string name="toast_add_event">Event add</string>
    <string name="toast_error_event">Event error</string>
    <string name="add_textview_localization">Localization</string>
    <string name="add_textview_foto">Photo</string>
    <string name="btn_capture_image">Capture</string>
    <string name="add_textview_category">Category</string>
    <string name="add_textview_description">Description</string>
    <string name="add_btn_save">Save</string>
    <string name="text_description_required">Required</string>
    <string-array name="category">
        <item>Accident</item>
        <item>Trash</item>
        <item>Road hole</item>
        <item>Signal Missing</item>
    </string-array>
    <string name="toast_edit_event">Event successfully edited</string>
    <string name="toast_fail_edit_event">Problems Editing</string>
    <string name="toast_add_fail_event">Fail add Event</string>
    <string name="toast_delete_event">Delete Event</string>
    <string name="toast_fail_delete_event">Fail delete event</string>

    <!-- Filter -->
    <string name="btn_apply_filter">Apply</string>
    <string name="textview_radius_filter">Radius</string>
    <string name="textview_filter">Filters</string>
    <string name="radius_range">Radius      de %1$sM a %2$sM</string>
    <string name="textview_category_filter">Category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="compass_red_arrow_north">The red arrow points North</string>
    <string name="toolbar_compass">compass</string>

</resources>