<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Shrine.Button.TextButton"
        android:id="@+id/app_bar_nota"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/productGridBackgroundColor"
        android:text="@string/cmtp_notes_label"
        android:focusable="true" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/app_bar_mapa"
        style="@style/Widget.Shrine.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/productGridBackgroundColor"
        android:text="@string/cmtp_maps_label" />

    <View
        android:layout_width="56dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?android:attr/textColorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/app_bar_profile"
        style="@style/Widget.Shrine.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/productGridBackgroundColor"
        android:text="@string/cmtp_account_label" />

<!--    <com.google.android.material.button.MaterialButton
        android:id="@+id/vg_leave"
        style="@style/Widget.Shrine.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/productGridBackgroundColor"
        android:text="@string/cmtp_account_leave_label" />-->

</merge>