<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.NoteFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/close_add_event"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/ColorBlackNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:src="@drawable/ic_back" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add_textview_localization"
                android:layout_marginStart="@dimen/_20sdp">
            </TextView>

            <fragment
                xmlns:map="http://schemas.android.com/apk/res-auto"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:id="@+id/location_img"
                android:layout_width="match_parent"
                map:cameraZoom="5"
                map:mapType="normal"
                map:liteMode="true"
                android:layout_height="150dp"
                android:layout_margin="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/add_textview_foto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add_textview_foto"
                android:layout_marginStart="@dimen/_20sdp">
            </TextView>

            <ImageView
                android:id="@+id/image_view"
                android:background="@drawable/ic_image"
                android:layout_gravity="center_horizontal"
                android:layout_width="200dp"
                android:layout_height="200dp" />
            <Button
                android:id="@+id/btn_capture"
                android:text="@string/btn_capture_image"
                android:layout_marginTop="12dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add_textview_category"
                android:layout_marginStart="@dimen/_20sdp">
            </TextView>
            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_20sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add_textview_description"
                android:layout_marginStart="@dimen/_20sdp">
            </TextView>
            <EditText
                android:id="@+id/text_description_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@null"
                android:hint="@string/add_textview_description"
                android:inputType="text"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/ColorDarkBlack"
                android:textColorHint="@color/ColorDarkBlack"
                android:textSize="@dimen/_14ssp"/>

            <Button
                android:id="@+id/btn_saveEvent"
                android:text="@string/add_btn_save"
                android:layout_marginTop="12dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

